# Operating-System-VirtualOS-

./: ARCHITECTURE.md  CMakeLists.txt  DEVELOPMENT_GUIDE.md  FILE_MANIFEST.md  LICENSE  MacOSLikeOS-Bridging-Header.h  Makefile  PROJECT_DELIVERY_SUMMARY.txt  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build-modular.sh  build-simple.sh  build-spm.sh  build.sh  init.sh  project.json  quick_ref.sh
include/: Application.h  ApplicationManager.h  DesktopEnvironment.h  EventManager.h  GraphicsEngine.hpp  OSWindow.h  RenderEngine.h  SystemUI.h  Window.h  WindowManager.h  graphics.h  kernel.h  metal_support.h  os_config.h  utils.h  window_c.h
src/: AppDelegate.h  AppDelegate.mm  main.mm
src/helpers/: SystemInfoHelper.h  SystemInfoHelper.mm
src/views/: DesktopView.h  DesktopView.mm  DockView.h  DockView.mm  MenuBarView.h  MenuBarView.mm
src/windows/: AboutThisMacWindow.h  AboutThisMacWindow.mm  CalendarWindow.h  CalendarWindow.mm  FinderWindow.h  FinderWindow.mm  ForceQuitWindow.h  ForceQuitWindow.mm  MailWindow.h  MailWindow.mm  MessagesWindow.h  MessagesWindow.mm  MusicWindow.h  MusicWindow.mm  NotesWindow.h  NotesWindow.mm  PhotosWindow.h  PhotosWindow.mm  SafariWindow.h  SafariWindow.mm  SecurityWindow.h  SecurityWindow.mm  SettingsWindow.h  SettingsWindow.mm  SetupWizardWindow.h  SetupWizardWindow.mm  TerminalWindow.h  TerminalWindow.mm  WiFiWindow.h  WiFiWindow.mm
